# rust-surrealdb-intro

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
